--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  background-color: #dee2e67a !important;
+}
+h1.header {
+  margin-left: 35%;
+  margin-top: 170px;
 }
 
 ol, ul {
@@ -24,12 +29,12 @@ ol, ul {
   font-size: 24px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 50px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 50px;
 }
 
 .square:focus {
@@ -41,10 +46,16 @@ ol, ul {
 }
 
 .game {
+  margin-left: 35%;
   display: flex;
   flex-direction: row;
 }
 
 .game-info {
   margin-left: 20px;
+}
+
+.status-text {
+  font-size: large;
+  margin-bottom: 10px;
 }
