--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,19 @@ ol, ul {
   padding-left: 30px;
 }
 
+td, th {
+  padding: 0 !important;
+  width: 0 !important;
+  text-align: center;
+}
+
+table {
+  padding: 0 !important;
+  width: 15% !important;
+  margin-left: 15px;
+  margin-right: 30px;
+}
+
 .board-row:after {
   clear: both;
   content: "";
@@ -46,7 +59,7 @@ ol, ul {
 }
 
 .game {
-  margin-left: 35%;
+  margin-left: 20%;
   display: flex;
   flex-direction: row;
 }
